--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "plugin:react-hooks/recommended",
         "plugin:prettier/recommended"
     ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -20,9 +21,23 @@
         "prettier"
     ],
     "rules": {
-        "prettier/prettier":"error",
+        "prettier/prettier": [
+            "error",
+            {
+                "printWidth": 80,
+                "tabWidth": 2,
+                "singleQuote": true,
+                "trailingComma": "none",
+                "arrowParens": "always",
+                "semi": false,
+                "endOfLine": "auto"
+            }
+        ],
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
+        "no-unused-vars": "warn",
         "import-helpers/order-imports": [
             "warn",
             {
